force-app/main/default/objects/Rooms__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deluxe Room</fullName>
            </value>
            <value>
                <fullName>Semi Deluxe Room</fullName>
            </value>
            <value>
                <fullName>Luxury</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>