force-app/main/default/objects/Rooms__c/fields/Room_number__c.field-meta.xml
<CustomField>
    <fullName>Room_number__c</fullName>
    <label>Room number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>101</fullName>
            </value>
            <value>
                <fullName>102</fullName>
            </value>
            <value>
                <fullName>103</fullName>
            </value>
            <value>
                <fullName>104</fullName>
            </value>
            <value>
                <fullName>105</fullName>
            </value>
            <value>
                <fullName>106</fullName>
            </value>
            <value>
                <fullName>107</fullName>
            </value>
            <value>
                <fullName>108</fullName>
            </value>
            <value>
                <fullName>109</fullName>
            </value>
            <value>
                <fullName>110</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>