force-app/main/default/objects/Rooms__c/validationRules/Hotel_required_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Hotel_required_rule</fullName>
    <active>true</active>
    <description>Hotel name should be entered</description>
    <errorConditionFormula>ISBLANK(Hotel__c)</errorConditionFormula>
    <errorMessage>Hotel Name required</errorMessage>
</ValidationRule>